# Genetic_Algorithm_Flappy_Bird

./: .gitignore  pyproject.toml
algorithms/: __init__.py
algorithms/genetic_algorithm/: __init__.py  genetic_algorithm.py  population.py
custom_logging/: __init__.py  logger.py
datasets/: __init__.py  classification_datasets.py  dataset_factory.py
envconfig/: __init__.py  envconfig.py
legacy/: flapBird.py  gameClasses.py  generalFunctions.py  training.py
legacy/game_demo/: gameClasses.py  gameDemo.py  generalFunctions.py  neuralNetwork.py  population.json
structures/: neural_network.py
visualization/: __init__.py  training_tracker.py  traning_tracker.py
