[project]
name = "neural-network-training-algorithms"
version = "0.1.0"
description = ""
authors = [
    {name = "jvpcms",email = "jvpcms.engenharia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
